[project]
name = "tissues"
version = "0.1.0"
description = "Count the number ruff issues, report error if bigger than previous run"
authors = [
    { name = "Fábio P. Fortkamp", email = "fabio@fabiofortkamp.com" }
]
dependencies = ["ruff"]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[project.scripts]
"tissues" = "tissues:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tissues"]
