[project]
name = "tissues"
version = "0.2.0"
description = "Count the number of linter issues, report error if bigger than previous run"
authors = [
    { name = "Fábio P. Fortkamp", email = "fabio@fabiofortkamp.com" }
]
dependencies = ["typer"]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/fabiofortkamp/tissues"
issues = "https://github.com/fabiofortkamp/tissues/issues"

[project.scripts]
"tissues" = "tissues.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tissues"]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest>=7"
]

[tool.pyright]
executionEnvironments = [{ root = "src" }]
venvPath = "."
venv = ".venv"
